--- a/public/viewer.html
+++ b/public/viewer.html
@@ -5,7 +5,7 @@
 <canvas id="game" width="500" height="300" style="border:1px solid black;"></canvas>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io();
+  const socket = io("https://interactive-website-9620.onrender.com");
   const canvas = document.getElementById('game');
   const ctx = canvas.getContext('2d');
   let x = 100, y = 100;
