--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,10 +3,14 @@
 <head><title>Control Your Character</title></head>
 <body>
 <canvas id="game" width="500" height="300" style="border:1px solid black;"></canvas>
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://interactive-website-9620.onrender.com/socket.io/socket.io.js"></script>
 <script>
   const socket = io("https://interactive-website-9620.onrender.com");
+
   const canvas = document.getElementById('game');
+  canvas.setAttribute('tabindex', '0');
+  canvas.focus();
+
   const ctx = canvas.getContext('2d');
   let x = 100, y = 100;
 
@@ -18,7 +22,7 @@
 
   draw();
 
-  document.addEventListener('keydown', e => {
+  canvas.addEventListener('keydown', e => {
     if (e.key === "ArrowRight") x += 5;
     if (e.key === "ArrowLeft") x -= 5;
     if (e.key === "ArrowUp") y -= 5;
