--- a/public/viewer.html
+++ b/public/viewer.html
@@ -23,6 +23,7 @@
     vals.textAlign = 'center'; // Horizontal alignment
     vals.textBaseline = 'middle'; // Vertical alignment
 
+    vals.fillText("x :" + x + ", y: " + y, x/2. y + 5);
     ctx.fillRect(x, y, 20, 20);
   }
 
