--- a/public/viewer.html
+++ b/public/viewer.html
@@ -25,6 +25,11 @@
 
     vals.fillText("x :" + x + ", y: " + y, x/2. y + 5);
     ctx.fillRect(x, y, 20, 20);
+
+    vals.strokeStyle = 'black';
+
+    vals.lineWidth = 2;
+    vals.strokeText("x :" + x + ", y: " + y, x/2. y + 5);
   }
 
   draw();
