--- a/public/viewer.html
+++ b/public/viewer.html
@@ -21,9 +21,9 @@
     vals.font = 'bold 48px Arial';
     vals.fillStyle = 'red'; // Text color
     vals.textAlign = 'center'; // Horizontal alignment
-    vals.textBaseline = 'middle'; // Vertical alignment
+    //vals.textBaseline = 'middle'; // Vertical alignment
 
-    vals.fillText("x :" + x + ", y: " + y, x/2, y + 5);
+    //vals.fillText("x :" + x + ", y: " + y, x/2, y + 5);
     ctx.fillRect(x, y, 20, 20);
 
     vals.strokeStyle = 'black';
