--- a/public/viewer.html
+++ b/public/viewer.html
@@ -29,7 +29,7 @@
     vals.strokeStyle = 'black';
 
     vals.lineWidth = 1;
-    vals.strokeText("x :" + x + ", y: " + y, x, y + 100);
+    vals.strokeText("x :" + x + ", y: " + y, x, y - 50);
   }
 
   draw();
