--- a/public/viewer.html
+++ b/public/viewer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html>
 <head><title>Control Your Character</title></head>
 <body>
@@ -59,7 +59,7 @@
   canvas.addEventListener('keydown', e => {
     if (e.key === "ArrowRight") player.x += 5;
     if (e.key === "ArrowLeft") player.x -= 5;
-    if (e.key === "ArrowUp") player.Yv = -50;
+    if (e.key === "ArrowUp") player.Yv = -500;
     socket.emit("move", { x: player.x , y: player.y , emote: "idle" });
     draw();
   });
