--- a/public/overlay.html
+++ b/public/overlay.html
@@ -17,16 +17,43 @@
   const idleimg = new Image();
   idleimg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png';
   
-  const walkimg = new Image();
-  walkimg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png';
-  
-  
-  
   idleimg.onload = () => requestAnimationFrame(draw);
 
+  const walkimg = new Image();
+  walkimg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png';
+  walkimg.onload = () => requestAnimationFrame(draw);
+
+
+  const boximg = new Image();
+  boximg.src = '/assets/obstacles/box_1.png';
+  boximg.onload = () => requestAnimationFrame(draw);
+
+
+  
+  
+
+  const boxes = [
+    {x: 70, y: 450, width: 20, height: 20},
+    {x: 90, y: 450, width: 20, height: 20},
+    {x: 190, y: 400, width: 20, height: 20},
+    {x: 210, y: 400, width: 20, height: 20},
+    {x: 0, y: 360, width: 20, height: 20},
+    {x: 400, y: 390, width: 20, height: 20},
+    {x: 400, y: 430, width: 20, height: 20},
+    {x: 420, y: 430, width: 20, height: 20},
+    {x: 400, y: 450, width: 20, height: 20},
+    {x: 400, y: 470, width: 20, height: 20},
+    {x: 550, y: 470, width: 20, height: 20},
+    {x: 940, y: 430, width: 20, height: 20},
+    {x: 960, y: 430, width: 20, height: 20},
+    {x: 980, y: 430, width: 20, height: 20},
+    {x: 940, y: 450, width: 20, height: 20},
+
+  ];
     
   function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    
+    setObjects();
     for (const id in players) {
       const p = players[id];
 
@@ -54,6 +81,13 @@
     ctx.fillText(p.username, p.x + 10, p.y - 5);
     }
     requestAnimationFrame(draw);
+  }
+
+  function setObjects() {
+    ctx.clearRect(0, 0, canvas.width,canvas.height);
+    for (const box of boxes) {
+      ctx.drawImage(boximg, box.x-5, box.y-5, box.width +12, box.height +12);
+    }
   }
 
   draw();
