--- a/public/viewer.html
+++ b/public/viewer.html
@@ -18,8 +18,8 @@
 
     const resources = {
       box: '/assets/obstacles/box_1.png',
-      idle: '/assets/characters/.../Slime1_Idle_body.png',
-      run: '/assets/characters/.../Slime1_Run_body.png'
+      idle: '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png',
+      run: '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png'
     };
     const imgs = {};
     const loadImages = (sources) => Promise.all(Object.entries(sources).map(
