--- a/public/viewer.html
+++ b/public/viewer.html
@@ -16,91 +16,85 @@
     const ctx = canvas.getContext('2d');
     ctx.imageSmoothingEnabled = false;
 
-    const resources = {
-      box: '/assets/obstacles/box_1.png',
-      idle: '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png',
-      run: '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png'
-    };
-    const imgs = {};
-    const loadImages = (sources) => Promise.all(Object.entries(sources).map(
-      ([key, src]) => new Promise(resolve => {
-        const img = new Image();
-        img.src = src;
-        img.onload = () => (imgs[key] = img, resolve());
-      })
-    ));
+    const box_1_img = new Image();
+    box_1_img.src = '/assets/obstacles/box_1.png';
+    const idleImg = new Image();
+    idleImg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png';
+    const runImg = new Image();
+    runImg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png';
+
+    const imgsPromise = Promise.all([
+      new Promise(r => box_1_img.onload = r),
+      new Promise(r => idleImg.onload = r),
+      new Promise(r => runImg.onload = r),
+    ]);
 
     const boxes = [
-       {x: 0, y: 400, width: 20, height: 20},
-    {x: 80, y: 450, width: 20, height: 20},
-    {x: 100, y: 450, width: 20, height: 20},
-    {x: 120, y: 450, width: 20, height: 20},
-    {x: 90, y: 350, width: 20, height: 20},
-    {x: 110, y: 350, width: 20, height: 20},
-    {x: 200, y: 400, width: 20, height: 20},
-    {x: 300, y: 480, width: 20, height: 20},
-    {x: 420, y: 420, width: 20, height: 20},
-    {x: 440, y: 420, width: 20, height: 20},
-    {x: 550, y: 380, width: 20, height: 20},
-    {x: 620, y: 340, width: 20, height: 20},
-    {x: 645, y: 360, width: 20, height: 20},
-    {x: 670, y: 340, width: 20, height: 20},
-    {x: 750, y: 380, width: 20, height: 20},
-    {x: 770, y: 380, width: 20, height: 20},
-    {x: 790, y: 380, width: 20, height: 20},
-    {x: 750, y: 440, width: 20, height: 20},
-    {x: 770, y: 440, width: 20, height: 20},
-    {x: 790, y: 440, width: 20, height: 20},
-
-
-    {x: 860, y: 400, width: 20, height: 20},
-    {x: 860, y: 380, width: 20, height: 20},
-    
-    {x: 980, y: 380, width: 20, height: 20},
+      {x: 0, y: 400, width: 20, height: 20},
+      {x: 80, y: 450, width: 20, height: 20},
+      {x: 100, y: 450, width: 20, height: 20},
+      {x: 120, y: 450, width: 20, height: 20},
+      {x: 90, y: 350, width: 20, height: 20},
+      {x: 110, y: 350, width: 20, height: 20},
+      {x: 200, y: 400, width: 20, height: 20},
+      {x: 300, y: 480, width: 20, height: 20},
+      {x: 420, y: 420, width: 20, height: 20},
+      {x: 440, y: 420, width: 20, height: 20},
+      {x: 550, y: 380, width: 20, height: 20},
+      {x: 620, y: 340, width: 20, height: 20},
+      {x: 645, y: 360, width: 20, height: 20},
+      {x: 670, y: 340, width: 20, height: 20},
+      {x: 750, y: 380, width: 20, height: 20},
+      {x: 770, y: 380, width: 20, height: 20},
+      {x: 790, y: 380, width: 20, height: 20},
+      {x: 750, y: 440, width: 20, height: 20},
+      {x: 770, y: 440, width: 20, height: 20},
+      {x: 790, y: 440, width: 20, height: 20},
+      {x: 860, y: 400, width: 20, height: 20},
+      {x: 860, y: 380, width: 20, height: 20},
+      {x: 980, y: 380, width: 20, height: 20},
     ];
+
     const player = {
-      x:200, y:480, width:20, height:20,
-      Xv:0, Yv:0, gravity:500,
-      onGround:false, friction:1200, speedMax:150,
-      jumping:false, username:'', action:'idle'
+      x: 200, y: 480, width: 20, height: 20,
+      Yv: 0, Yforce: 0, YforceMax: 0.5,
+      Xv: 0, gravity: 500, onGround: false,
+      friction: 1200, speedMax: 150,
+      running: false, jumping: false,
+      username: "", action: "idle"
     };
 
-    const anim = { fw:64, fh:64, count:6, frame:0, row:0 };
+    const anim = { fw: 64, fh: 64, count: 6, frame: 0, row: 0 };
     let lastTs = 0, frameTimer = 0, moving = false;
 
-    // Login overlay
     document.getElementById('usernameBtn').onclick = () => {
       const name = document.getElementById('usernameInput').value.trim() || 'Player1';
       player.username = name;
-      socket.emit('new‑Player', { id: socket.id, name });
+      socket.emit('new-Player', { id: socket.id, name });
       document.getElementById('loginOverlay').style.display = 'none';
       canvas.focus();
     };
 
-    // Collision helper
     function handleCollision(dt) {
       let acted = false;
       for (const b of boxes) {
-        const bx = b.x, by = b.y, bw = b.width, bh = b.height;
         const px = player.x, py = player.y, pw = player.width, ph = player.height;
-        // Top surface landing
+        const { x: bx, y: by, width: bw, height: bh } = b;
+
         if (px + pw > bx && px < bx + bw &&
-            py + ph <= by && py + ph + player.Yv*dt >= by) {
+            py + ph <= by && py + ph + player.Yv * dt >= by) {
           player.y = by - ph; player.Yv = 0; player.onGround = true; acted = true;
         }
-        // Left side
-        if (px + pw <= bx && px + pw + player.Xv*dt >= bx &&
-            py + ph > by && py < by + bh) {
+        else if (px + pw <= bx && px + pw + player.Xv * dt >= bx &&
+                 py + ph > by && py < by + bh) {
           player.x = bx - pw; player.Xv = 0; acted = true;
         }
-        // Right side
-        if (px >= bx + bw && px + player.Xv*dt <= bx + bw &&
-            py + ph > by && py < by + bh) {
+        else if (px >= bx + bw && px + player.Xv * dt <= bx + bw &&
+                 py + ph > by && py < by + bh) {
           player.x = bx + bw; player.Xv = 0; acted = true;
         }
-        // Underside bump
-        if (px + pw > bx && px < bx + bw &&
-            py >= by + bh && py + player.Yv*dt <= by + bh) {
+        else if (px + pw > bx && px < bx + bw &&
+                 py >= by + bh && py + player.Yv * dt <= by + bh) {
           player.Yv = 10; acted = true;
         }
         if (acted) break;
@@ -109,11 +103,13 @@
 
     function update(dt) {
       frameTimer += dt;
-      if (frameTimer >= 0.1) { anim.frame = (anim.frame + 1) % anim.count; frameTimer = 0; }
+      if (frameTimer >= 0.1) {
+        anim.frame = (anim.frame + 1) % anim.count;
+        frameTimer = 0;
+      }
       player.onGround = false;
       player.Yv += player.gravity * dt;
       player.y += player.Yv * dt;
-
       handleCollision(dt);
 
       if (player.y + player.height >= canvas.height) {
@@ -131,10 +127,12 @@
       }
     }
 
-    function drawFrame() {
-      ctx.clearRect(0,0,canvas.width,canvas.height);
-      boxes.forEach(b => ctx.drawImage(imgs.box, b.x, b.y, b.width, b.height));
-      const sprite = player.action === 'run' ? imgs.run : imgs.idle;
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (const b of boxes) {
+        ctx.drawImage(box_1_img, b.x, b.y, b.width, b.height);
+      }
+      const sprite = player.action === 'run' ? runImg : idleImg;
       ctx.drawImage(sprite,
         anim.frame * anim.fw, anim.row * anim.fh, anim.fw, anim.fh,
         player.x - 20, player.y - 20, anim.fw, anim.fh
@@ -143,7 +141,7 @@
       ctx.fillStyle = 'blue';
       ctx.textAlign = 'center';
       ctx.textBaseline = 'bottom';
-      ctx.fillText(player.username, player.x + player.width/2, player.y - 5);
+      ctx.fillText(player.username, player.x + player.width / 2, player.y - 5);
 
       socket.emit('move', {
         x: player.x,
@@ -157,41 +155,50 @@
     }
 
     canvas.addEventListener('keydown', e => {
-      if (['ArrowLeft','ArrowRight','ArrowUp'].includes(e.key)) moving = true;
+      if (['ArrowLeft', 'ArrowRight', 'ArrowUp'].includes(e.key)) moving = true;
       if (e.key === 'ArrowUp' && player.onGround) {
         player.Yv = -200;
         player.jumping = true;
       }
       if (e.key === 'ArrowRight' && player.onGround) {
-        player.action = 'run'; anim.count = 8; anim.row = 3;
+        player.action = 'run';
+        anim.count = 8;
+        anim.row = 3;
         player.Xv = player.speedMax;
       }
       if (e.key === 'ArrowLeft' && player.onGround) {
-        player.action = 'run'; anim.count = 8; anim.row = 2;
+        player.action = 'run';
+        anim.count = 8;
+        anim.row = 2;
         player.Xv = -player.speedMax;
       }
     });
 
     canvas.addEventListener('keyup', e => {
-      if (['ArrowLeft','ArrowRight','ArrowUp'].includes(e.key)) moving = false;
-      if (e.key === 'ArrowUp') { player.jumping = false; }
-      if (['ArrowLeft','ArrowRight'].includes(e.key)) {
-        player.action = 'idle'; anim.frame = 0; anim.count = 6; anim.row = 0;
+      if (['ArrowLeft', 'ArrowRight', 'ArrowUp'].includes(e.key)) moving = false;
+      if (e.key === 'ArrowUp') player.jumping = false;
+      if (['ArrowLeft', 'ArrowRight'].includes(e.key)) {
+        player.action = 'idle';
+        anim.frame = 0;
+        anim.count = 6;
+        anim.row = 0;
       }
     });
 
-    function loop(ts) {
-      const dt = (ts - lastTs) / 1000;
-      lastTs = ts;
-      update(dt);
-      drawFrame();
-      requestAnimationFrame(loop);
-    }
-
-    loadImages(resources).then(() => {
+    imgsPromise.then(() => {
       lastTs = performance.now();
       canvas.focus();
-      requestAnimationFrame(loop);
+      requestAnimationFrame(now => {
+        lastTs = now;
+        function loop(ts) {
+          const dt = (ts - lastTs) / 1000;
+          lastTs = ts;
+          update(dt);
+          draw();
+          requestAnimationFrame(loop);
+        }
+        loop(lastTs);
+      });
     });
   </script>
 </body>
