--- a/public/viewer.html
+++ b/public/viewer.html
@@ -14,7 +14,7 @@
     const socket = io("https://interactive-website-9620.onrender.com");
     const canvas = document.getElementById('game');
     const ctx = canvas.getContext('2d');
-    ctx.imageSmoothingEnabled = false;
+    //ctx.imageSmoothingEnabled = false;
 
     const box_1_img = new Image();
     box_1_img.src = '/assets/obstacles/box_1.png';
