--- a/public/viewer.html
+++ b/public/viewer.html
@@ -296,7 +296,7 @@
     if (e.key === "ArrowUp")  {
       if(player.onGround == true) {
         player.jumping = true;
-        requestAnimationFrame(gameLoop);
+        //requestAnimationFrame(gameLoop);
       }
     }
 
