--- a/public/viewer.html
+++ b/public/viewer.html
@@ -300,8 +300,8 @@
       }
     }
 
-    socket.emit("move", { x: player.x , y: player.y , frameCount: animations.frameCount, frameIndex: animations.currentFrame, frameRow:animations.frameRow, username:player.username, emote: player.action });
-    draw();
+    //socket.emit("move", { x: player.x , y: player.y , frameCount: animations.frameCount, frameIndex: animations.currentFrame, frameRow:animations.frameRow, username:player.username, emote: player.action });
+    //draw();
     //equestAnimationFrame(gameLoop);
   });
 
@@ -325,8 +325,8 @@
       }
     }
 
-    socket.emit("move", { x: player.x , y: player.y , frameCount: animations.frameCount, frameIndex: animations.currentFrame, frameRow:animations.frameRow, username:player.username, emote: player.action });
-    draw();
+    //socket.emit("move", { x: player.x , y: player.y , frameCount: animations.frameCount, frameIndex: animations.currentFrame, frameRow:animations.frameRow, username:player.username, emote: player.action });
+    //draw();
   });
   requestAnimationFrame(gameLoop);
 </script>
