Update overlay.html change messagge to blue

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -114,7 +114,7 @@
     ctx.fillText(p.username, p.x + 10, p.y - 5);
     }
     requestAnimationFrame(draw);
-    ctx.fillStyle = 'black';
+    ctx.fillStyle = 'blue';
     ctx.fillText("High Score: " + high_user + " -- " + high_score, 480, 520);
   }
 
