--- a/public/viewer.html
+++ b/public/viewer.html
@@ -365,5 +365,7 @@
   });
   requestAnimationFrame(gameLoop);
 </script>
+<iframe src="https://www.twitch.tv/eberhex" height= "300px" width="300px"></iframe>
 </body>
 </html>
+
