--- a/public/viewer.html
+++ b/public/viewer.html
@@ -522,10 +522,11 @@
     });
 
     // Start loop once at least one critical image is ready
-    idleImg.onload = () => requestAnimationFrame(gameLoop);
+    requestAnimationFrame(gameLoop);
   </script>
 </body>
 </html>
+
 
 
 
